--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "temp-branch -d dist"
+    "deploy": "temp-branch -d src"
   },
   "dependencies": {
     "react": "^18.2.0",
